<resources>
    <string name="app_name">ArtRec</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="prompt_username">Username</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="publisher">Publisher</string>
    <string name="rights">Rights</string>
    <string name="journals">Journals</string>
    <string name="articles">Articles</string>
    <string name="settings">Settings</string>
    <string name="publication_date">Publication date</string>

    <string name="choose_subjects">Choose subjects</string>
    <string name="subjects">Subjects</string>
    <string name="next">Next</string>
    <string name="please_select_subjects">Please select at least one subject:</string>
    <string name="title_activity_register">Register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short_confirm">Password (confirm)</string>
    <string name="not_user_register_here">Not a user yet? Register here.</string>
    <string name="please_select_journals">Please select at least one journal:</string>
    <string name="welcome_to_artrec">Welcome to ArtRec!</string>
    <string name="main_welcome_message_long">To get started, have a look in the swipe in menu to the left.</string>
    <string name="main_welcome_message_tip">By clicking on journals in the menu, you can view a list of your selected
        journals. By clicking on a journal you\'ll see the latest articles published in that journal!
    </string>
    <string name="tip_colon">Tip:</string>
    <string name="welcome">Welcome</string>
    <string name="error_password_mismatch">Password don\'t match.</string>
    <string name="error_username_exists">Username already taken.</string>
    <string name="username_available">Username available.</string>
    <string name="projects">Projects</string>
    <string name="title_activity_journal">JournalActivity</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="log_out">Log out</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="keywords">Keywords</string>
    <string name="clear_all">Clear all</string>
    <string name="setup_again">Redo setup</string>
    <string name="create_project">Create project</string>
</resources>
