<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_articles"
                android:icon="@drawable/ic_articles_48dp"
                android:title="@string/articles"/>
        <item
                android:id="@+id/nav_journals"
                android:icon="@drawable/ic_journals_48dp"
                android:title="@string/journals"/>
        <item
                android:id="@+id/nav_projects"
                android:icon="@drawable/ic_folder_black_48dp"
                android:title="@string/projects"/>
        <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings"/>
        <item
                android:id="@+id/nav_resetup"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/setup_again"/>
    </group>

</menu>
